# PYSTILT

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STILT-R.md  justfile  pyproject.toml  stilt.py
.github/workflows/: docs.yml  lint.yml  publish.yml  quality.yml  tests.yml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  migration.rst  roadmap.rst  usage.rst
docs/_ext/: config_docs.py
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
docs/advanced/: column_receptors.rst  custom_hooks.rst  durable_state.rst  error_trajectories.rst  footprint_aggregation.rst  index.rst  observations.rst  output_state.rst
docs/api/: index.rst
docs/getting_started/: index.rst  installation.rst  quickstart.rst  what_is_stilt.rst
docs/guides/: configuration.rst  executors.rst  index.rst  kubernetes.rst  meteorology.rst  outputs.rst  project_layout.rst  python_inline.rst  receptors.rst  slurm.rst
docs/guides/execution/: index.rst  kubernetes.rst  local.rst  slurm.rst
docs/migration/: index.rst  r_stilt.rst  stiltctl.rst  x_stilt.rst
docs/reference/: configuration.rst  core.rst  execution.rst  hysplit.rst  index.rst  meteorology.rst  observations.rst  storage.rst
docs/source/: api.rst  conf.py  index.rst  installation.rst
docs/tutorials/: column_satellite.rst  flux_inversion.rst  hpc_slurm.rst  index.rst  wbb_stationary.rst
docs/user_guide/: execution.rst  index.rst  meteorology.rst  observations.rst  project_setup.rst  results.rst  running.rst  service.rst
examples/cloud/kubernetes/: deployment.yaml  scaledobject.yaml  secret.example.yaml
src/stilt/: __init__.py  __main__.py  artifacts.py  cli.py  collections.py  completion.py  config.py  errors.py  footprint.py  hysplit.py  manifest.py  meteorology.py  model.py  receptor.py  receptors.py  records.py  runtime.py  selection.py  simulation.py  trajectory.py  transforms.py  visualization.py  workers.py
src/stilt/config/: __init__.py  fields.py  footprint.py  meteorology.py  model.py  params.py  runtime.py  spatial.py  transforms.py
src/stilt/execution/: __init__.py  entrypoints.py  execute.py  phases.py  tasks.py
src/stilt/execution/backends/: __init__.py  factory.py  kubernetes.py  local.py  protocol.py  slurm.py
src/stilt/executors/: __init__.py  factory.py  kubernetes.py  local.py  protocol.py  slurm.py
src/stilt/hysplit/: __init__.py  control.py  driver.py  namelist.py  runner.py
src/stilt/index/: __init__.py  base.py  factory.py  postgres.py  protocol.py  rebuild.py  sql.py  sqlite.py  updates.py
src/stilt/observations/: __init__.py  apply.py  chemistry.py  geometry.py  observation.py  operators.py  receptors.py  scenes.py  selection.py  uncertainty.py  weighting.py
src/stilt/observations/sensors/: __init__.py  base.py  column.py  point.py
src/stilt/repositories/: __init__.py  postgres.py  protocol.py  sqlite.py
src/stilt/service/: __init__.py  factory.py  kubernetes.py  postgres.py  project.py
src/stilt/storage/: __init__.py  files.py  layout.py  project.py  store.py
stilt/: __init__.py  config.py  model.py  simulation.py
tests/: __init__.py  conftest.py  test_apply_vertical_operator.py  test_artifacts.py  test_chemistry.py  test_cli.py  test_column_sensor.py  test_completion.py  test_config.py  test_errors.py  test_executors.py  test_footprint.py  test_hysplit.py  test_hysplit_release_assignment.py  test_integration.py  test_manifest.py  test_meteorology.py  test_model.py  test_observation_integration.py  test_observation_receptors.py  test_observation_scenes.py  test_observation_selection.py  test_observation_spatial_selection.py  test_observations.py  test_pkg.py  test_point_sensor.py  test_receptor.py  test_receptors.py  test_repositories.py  test_runtime.py  test_service.py  test_service_and_transforms.py  test_service_kubernetes.py  test_simulation.py  test_storage.py  test_trajectory.py  test_uncertainty.py  test_utils.py  test_visualization.py  test_weighting.py  (+1 more)
tests/execution/: test_backends.py  test_execute.py
tests/fixtures/: __init__.py  generate_r_ref.sh  r_stilt_reference.py
tests/fixtures/r_helpers/: calc_footprint.r  calc_footprint_debug.r  calc_footprint_stages.r  calc_plume_dilution.r  calc_trajectory.r
tests/fixtures/r_ref/: r_foot.nc  r_traj.parquet
tests/index/: test_factory.py  test_postgres.py  test_postgres_extended.py  test_rebuild.py  test_sql_predicates.py  test_sqlite.py
tests/integration/: conftest.py  test_hysplit_release_assignment.py  test_integration.py  test_r_stilt_fidelity.py  test_service_and_transforms.py
tests/integration/r_stilt/: test_fidelity.py  test_footprint_synth.py
tests/r_stilt/: conftest.py  test_config_parity.py  test_fidelity.py  test_footprint_synth.py
tests/storage/: test_files.py  test_store.py
