[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystilt"
version = "0.1.0a1"
description = "A Python implementation of the STILT Lagrangian atmospheric transport model."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "James Mineau", email = "jameskmineau@gmail.com"}
]
keywords = ["stilt", "hysplit", "atmospheric-transport", "lagrangian", "footprint", "meteorology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "arlmet>=0.1.0a1",
    "fsspec>=2024.2",
    "netcdf4>=1.6.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "shapely>=2.0",
    "typer>=0.9",
    "typing-extensions>=4.0",
    "xarray>=2023.6",
]

[project.optional-dependencies]
projection = [
    "pyproj>=3.5",
]
visualization = [
    "matplotlib>=3.7",
]
cloud = [
    "gcsfs>=2024.2",
    "psycopg[binary]>=3.1",
    "kubernetes>=28.0",
    "s3fs>=2024.2",
]
complete = [
    "pystilt[projection]",
    "pystilt[visualization]",
    "pystilt[cloud]",
]

[dependency-groups]
dev = [
    "pystilt[complete]",
    "build>=1.2",
    "twine>=5.0",
    "docstr-coverage>=2.0.0",
    "pre-commit>=3.0.0",
    "pyright[nodejs]>=1.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pydata-sphinx-theme>=0.14.0",
    "ruff>=0.1.0",
    "rust-just>=1.42.4",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-design>=0.5",
    "pytest-dotenv>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/jmineau/PYSTILT"
Documentation = "https://jmineau.github.io/PYSTILT/"
Repository = "https://github.com/jmineau/PYSTILT"
Issues = "https://github.com/jmineau/PYSTILT/issues"

[tool.coverage.run]
source = ["src/stilt"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests requiring real met files and HYSPLIT execution",
    "fidelity: R-STILT live comparison tests (slow; require STILT_R_DIR and Rscript)",
]
env_files = [".env"]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D213",  # multi-line summary should start at the second line
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["stilt"]

[project.scripts]
stilt = "stilt.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stilt" = ["py.typed"]
"stilt.hysplit" = ["bin/**/*", "data/*"]
